Mon Apr 25 02:51:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/lib/date/format.rb: require 'date_core.so'.
	  date/format needs methods which are now in date_core.so.
	  This breaks make rdoc which uses Date._parse from time.rb.

Mon Apr 25 02:47:46 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/lib/date/format.rb: fixed a bug of regex.

Mon Apr 25 02:12:26 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/lib/date/format.rb: an adjustment of regex.

Mon Apr 25 01:58:50 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/lib/date/format.rb: omitted to call _parse.

Mon Apr 25 01:03:03 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (rb_to_id): remove unused variable.

Sun Apr 24 22:19:05 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c, rational.c: omitted some method calls.

Sun Apr 24 02:57:27 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (n2i): takes long.

Sun Apr 24 02:51:06 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c: reverted.

Sun Apr 24 02:25:23 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/intern.h: pcc can't use __builtin_constant_p.

	* vm_exec.c: change condition.

Sun Apr 24 01:58:01 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (leap_p): surpress warning: parentheses.

	* ext/date/date_core.c (date_s__parse_internal): remove unused
	  variable "str".

	* ext/date/date_parse.c (parse_ddd_cb): use RSTRING_LENINT.

	* ext/date/date_strftime.c (date_strftime_with_tmx): remove unused
	  variable.

Sun Apr 24 00:34:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c: removed some unused macros.  use strchr()
	  instead of index().

Sat Apr 23 21:29:42 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: replacement of implementation of
	  _parse.  [experimental]
	* ext/date/date_parse.c: new.
	* ext/date/lib/date/format.rb: removed ruby version of _parse.
